Set the document we created from a template to read/write

If the template is in a read-only folder (like an installation
location) the document would be set to ReadOnly, which is wrong.

BUG:393112